[gd_scene load_steps=7 format=2]

[ext_resource path="res://bill.png" type="Texture" id=1]
[ext_resource path="res://factory.png" type="Texture" id=2]
[ext_resource path="res://Slacker.png" type="Texture" id=3]
[ext_resource path="res://chocolate_candy.png" type="Texture" id=4]
[ext_resource path="res://candy_small.png" type="Texture" id=5]
[ext_resource path="res://Factory.gd" type="Script" id=6]

[node name="Factory" type="Sprite"]
position = Vector2( 161.75, 97.75 )
scale = Vector2( 1.0614, 1.0614 )
texture = ExtResource( 2 )
script = ExtResource( 6 )
_product_texture = ExtResource( 5 )

[node name="ConsumingProduct" type="Sprite" parent="."]
position = Vector2( -56, -72 )
texture = ExtResource( 4 )

[node name="OwnedChocolatesAndCandies" type="Label" parent="ConsumingProduct"]
margin_left = 24.0
margin_top = -8.0
margin_right = 51.0
margin_bottom = 6.0
text = "0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bill" type="Sprite" parent="."]
position = Vector2( -48, -48 )
texture = ExtResource( 1 )

[node name="OwnedBills" type="Label" parent="Bill"]
margin_left = 16.0
margin_top = -8.0
margin_right = 43.0
margin_bottom = 6.0
text = "0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BillsInMarket" type="Label" parent="Bill"]
margin_left = 40.0
margin_top = -8.0
margin_right = 67.0
margin_bottom = 6.0
text = "-0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Worker" type="Sprite" parent="."]
position = Vector2( -56, 16 )
texture = ExtResource( 3 )

[node name="Product" type="Sprite" parent="."]
position = Vector2( -16, 48 )
texture = ExtResource( 5 )

[node name="OwnedProduct" type="Label" parent="Product"]
margin_left = 16.0
margin_top = -8.0
margin_right = 42.0
margin_bottom = 11.0
text = "0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProductsInMarket" type="Label" parent="Product"]
margin_left = 40.0
margin_top = -8.0
margin_right = 66.0
margin_bottom = 11.0
text = "-0.0"
__meta__ = {
"_edit_use_anchors_": false
}
